--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@master
       with:
-        node-version: '18.x'
+        node-version: '18.16'
     - name: Install dependencies
       run: npm install
     - name: Build
